# openbricks

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
.gitea/workflows/: ci.yaml  firmware.yaml
.github/workflows/: ci.yaml
docs/: architecture.md  build.md  hardware.md
docs/datasheets/: README.md
examples/: esp32_drivebase.py  full_robot.py  oled_hello.py  read_color.py  robot.json  st3032_drivebase_square.py  st3032_drivebase_test.py  st3032_run_angle_debug.py  st3215_bench_test.py  st3215_drivebase_test.py  st3215_reid.py  st3215_run_angle_debug.py  st3215_scan.py
native/: README.md
native/boards/: openbricks_boot.py
native/boards/openbricks_esp32/: manifest.py  mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board
native/boards/openbricks_esp32s3/: manifest.py  mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board
native/frozen/: _openbricks_main.py  boot.py  main.py
native/patches/: README.md  esp32-main-openbricks-autoboot.patch  modbluetooth_nimble-esp-idf-5.5.patch
native/user_c_modules/openbricks/: bno055.c  drivebase.c  drivebase.h  drivebase_core.c  drivebase_core.h  encoder.c  micropython.cmake  micropython.mk  motor_process.c  motor_process.h  motor_process_core.c  motor_process_core.h  observer.c  observer.h  observer_core.c  observer_core.h  openbricks_module.c  pcnt_encoder.c  servo.c  servo.h  servo_core.c  servo_core.h  trajectory.c  trajectory.h  trajectory_core.c  trajectory_core.h
openbricks/: __init__.py  _native.py  ble_repl.py  bluetooth.py  bluetooth_button.py  config.py  distance.py  hub.py  interfaces.py  launcher.py  log.py
openbricks/drivers/: __init__.py  bno055.py  encoder.py  hcsr04.py  jgb37_520.py  l298n.py  mg370.py  pcnt_encoder.py  ssd1306.py  st3032.py  st3215.py  tb6612.py  tcs34725.py  vl53l0x.py  vl53l1x.py
openbricks/robotics/: __init__.py  drivebase.py
openbricks/tools/: __init__.py  scheduler.py
scripts/: build_firmware.sh  bump-version.py  check-version.py  extract-wro-slot-coords.py  flash_firmware.py  regen-wro-mat-textures.sh
tests/: _fakes.py  _fakes_ble.py  _fakes_neopixel.py  _fakes_pcnt.py  _fakes_ssd1306.py  conftest.py  run.py  test_ble_repl.py  test_bluetooth.py  test_bluetooth_button.py  test_bno055.py  test_config.py  test_drivebase.py  test_drivebase_native_2dof.py  test_drivebase_use_gyro.py  test_encoder.py  test_hcsr04.py  test_hub.py  test_interfaces.py  test_jgb37_520.py  test_l298n.py  test_launcher.py  test_log.py  test_mg370.py  test_motor_process_timer_id.py  test_observer.py  test_pcnt_encoder.py  test_pcnt_encoder_irq_contract.py  test_scheduler.py  test_ssd1306.py  test_st3032.py  test_st3215.py  test_tb6612.py  test_tcs34725.py  test_trajectory.py  test_vl53l0x.py  test_vl53l1x.py
tools/openbricks/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
tools/openbricks-dev/: README.md  pyproject.toml
tools/openbricks-dev/openbricks_dev/: __init__.py  __main__.py  _nus.py  cli.py  download.py  run.py  scan.py  stop.py  upload.py
tools/openbricks-dev/openbricks_dev_legacy/: __init__.py  cli.py
tools/openbricks-dev/tests/: test_cli.py  test_download.py  test_flash.py  test_log.py  test_run.py  test_scan.py  test_stop.py  test_upload.py
tools/openbricks-sim/: README.md  pyproject.toml  setup.py
tools/openbricks-sim/examples/: repeat_mission.py  scored_mission.py  wall_avoid.py  wander.py  wander_with_gyro.py
tools/openbricks-sim/native/: openbricks_sim_native.c
tools/openbricks-sim/openbricks_sim/: __init__.py  chassis.py  cli.py  robot.py  runtime.py  shim.py
tools/openbricks-sim/tests/: test_cli.py  test_color_sensor.py  test_distance_sensor.py  test_imu.py  test_native_drivebase.py  test_native_motor_process.py  test_native_observer.py  test_native_trajectory.py  test_robot.py  test_runtime.py  test_shim.py  test_world.py
tools/openbricks-sim/worlds/wro_2026_elementary_robot_rockstars/: README.md
tools/openbricks-sim/worlds/wro_2026_junior_heritage_heroes/: README.md  world.xml
tools/openbricks-sim/worlds/wro_2026_senior_mosaic_masters/: README.md  world.xml
tools/openbricks/examples/: color_drive.py  unified_chassis_dims.py  wander_hardware_style.py  wro_elementary_walkthrough.py
tools/openbricks/native/: openbricks_sim_native.c
tools/openbricks/openbricks_dev/: __init__.py  _nus.py  cli.py  flash.py  log.py  run.py  upload.py
tools/openbricks/openbricks_sim/: __main__.py  chassis.py  cli.py  lego_mjcf.py  randomization.py  robot.py  runtime.py  shim.py  world.py
tools/openbricks/openbricks_sim/worlds/practice_walls/: world.xml
tools/openbricks/openbricks_sim/worlds/wro_2026_elementary_robot_rockstars/: README.md  world.xml
tools/openbricks/openbricks_sim/worlds/wro_2026_elementary_robot_rockstars/props/: amplifier.ldr  cable.ldr  clef.ldr  congas.ldr  guitar.ldr  keyboard.ldr  microphone.ldr  note_black.ldr  note_blue.ldr  note_green.ldr  note_red.ldr  note_white.ldr  note_yellow.ldr  speaker.ldr
tools/openbricks/openbricks_sim/worlds/wro_2026_junior_heritage_heroes/: README.md  world.xml
tools/openbricks/openbricks_sim/worlds/wro_2026_junior_heritage_heroes/props/: artefact.ldr  barrier.ldr  dirt.ldr  parrot.ldr  red_tower.ldr  visitor.ldr  yellow_tower.ldr
tools/openbricks/openbricks_sim/worlds/wro_2026_senior_mosaic_masters/: README.md  mosaic_frame.stl  world.xml
tools/openbricks/openbricks_sim/worlds/wro_2026_senior_mosaic_masters/props/: cement_bowl.ldr  cement_element.ldr  masonry_trowel.ldr  mosaic_tile.ldr  rect_trowel.ldr  senior_barrier.ldr  senior_barrier_black_red.ldr  senior_barrier_red_blue.ldr
tools/openbricks/tests/: test_chassis.py  test_cibuildwheel_config.py  test_cli.py  test_color_sensor.py  test_flash.py  test_lego_mjcf.py  test_native_servo.py  test_randomization.py  test_run.py  test_sdist_build.py  test_shim.py  test_sim_cli.py  test_wheel_bundles_worlds.py  test_world.py
tools/openbricks/worlds/practice_walls/: README.md
tools/openbricks/worlds/practice_zones/: README.md  world.xml
