[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openbricks"
version = "0.5.0"
description = "A Pybricks-style MicroPython robotics library for open hardware."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "openbricks contributors" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Topic :: Software Development :: Embedded Systems",
]

[project.optional-dependencies]
dev = ["coverage"]

[tool.setuptools.packages.find]
include = ["openbricks*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
