[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openbricks"
# Single source of truth: openbricks/__init__.py::__version__. setuptools
# reads it via AST parse so there's no build-time import cost and no
# duplicate number to keep in sync between pyproject.toml and the package.
dynamic = ["version"]
description = "A Pybricks-style MicroPython robotics library for open hardware."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "openbricks contributors" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Topic :: Software Development :: Embedded Systems",
]

[project.optional-dependencies]
dev = ["coverage"]

[tool.setuptools.dynamic]
version = { attr = "openbricks.__version__" }

[tool.setuptools.packages.find]
include = ["openbricks*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
