[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openbricks-sim"
# ``dynamic`` reads openbricks_sim.__version__; the same bump flow
# used for ``openbricks-dev`` applies here (``scripts/bump-version.py
# --openbricks-sim X.Y.Z`` — will be wired in once the sim is released).
dynamic = ["version"]
description = "MuJoCo-backed simulator for the openbricks MicroPython firmware. Write your robot code once, run it on a real hub or inside a physics sim."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "openbricks contributors" }]
keywords = [
    "openbricks",
    "micropython",
    "robotics",
    "simulation",
    "mujoco",
    "wro",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Education",
]
dependencies = [
    # DeepMind MuJoCo — 1 kHz physics, native sensor primitives,
    # stable wheel contacts, cross-platform bindings.
    "mujoco >= 3.2",
    # Small math helpers (pose assembly, coord transforms).
    "numpy >= 1.24",
]

[project.urls]
Homepage = "https://github.com/1e0ng/openbricks"
Source   = "https://github.com/1e0ng/openbricks"
Issues   = "https://github.com/1e0ng/openbricks/issues"

[project.scripts]
openbricks-sim = "openbricks_sim.cli:main"

[project.optional-dependencies]
dev = ["pytest", "coverage"]

[tool.setuptools.dynamic]
version = { attr = "openbricks_sim.__version__" }

[tool.setuptools.packages.find]
include = ["openbricks_sim*"]

# The ``openbricks_sim._native`` CPython extension is declared in
# ``setup.py`` alongside this pyproject — see the shim's docstring
# for why. Summary: setuptools' declarative ext-modules can't
# handle source paths that reach *upward* in the repo (to the
# shared ``native/user_c_modules/openbricks/*_core.c`` files), but
# a setup.py that resolves them to absolute paths sidesteps the
# issue.
