[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openbricks"
# Version is baked by ``scripts/bump-version.py`` into
# ``openbricks_dev/__init__.py::__version__``; the root ``VERSION``
# file is the canonical source. ``dynamic`` tells setuptools to read
# from the attribute, so this pyproject never needs editing for a
# version bump.
dynamic = ["version"]
description = "openbricks — host-side CLI + MuJoCo-backed simulator for the openbricks MicroPython firmware. Flash, list, run, upload, log; ``openbricks sim`` for the physics simulator."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "openbricks contributors" }]
keywords = [
    "openbricks",
    "micropython",
    "robotics",
    "esp32",
    "ble",
    "bluetooth",
    "pybricks",
    "lego",
    "firmware",
    "simulation",
    "mujoco",
    "wro",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
# Core (CLI-only) dependencies. Users who don't need the physics sim
# install just these — fast, no MuJoCo. The sim deps live under the
# optional ``[sim]`` extra below.
dependencies = [
    # BLE scan + connect on macOS / Linux / Windows without vendor tools.
    "bleak >= 0.22",
    # Flashing ESP32 / ESP32-S3 images.
    "esptool >= 4.7",
    # Serial REPL bridge used by ``flash`` after a write.
    "mpremote >= 1.23",
]

[project.optional-dependencies]
# ``pip install openbricks[sim]`` adds the MuJoCo physics simulator.
# MuJoCo is ~50 MB with native OpenGL deps, so it's opt-in: most
# users (flash + run + log) don't need it.
sim = [
    "mujoco >= 3.2",
    "numpy >= 1.24",
]
dev = ["pytest", "coverage"]

[project.urls]
Homepage = "https://github.com/1e0ng/openbricks"
Source   = "https://github.com/1e0ng/openbricks"
Issues   = "https://github.com/1e0ng/openbricks/issues"
Releases = "https://github.com/1e0ng/openbricks/releases"

[project.scripts]
# One unified entry point. ``openbricks sim …`` short-circuits to
# ``openbricks_sim.cli`` when the [sim] extra is installed; otherwise
# prints a "pip install openbricks[sim]" hint.
openbricks = "openbricks_dev.cli:main"

[tool.setuptools.dynamic]
version = { attr = "openbricks_dev.__version__" }

# Both the CLI module (``openbricks_dev``, kept as a Python module
# name to avoid colliding with the firmware-side ``openbricks``
# package on the hub) and the sim module ship in the same wheel.
[tool.setuptools.packages.find]
include = ["openbricks_dev*", "openbricks_sim*"]

# The ``openbricks_sim._native`` CPython extension is declared in
# ``setup.py`` alongside this pyproject — see that shim's docstring
# for why. Summary: setuptools' declarative ext-modules can't
# handle source paths that reach *upward* in the repo (to the
# shared ``native/user_c_modules/openbricks/*_core.c`` files), but
# a setup.py that resolves them to absolute paths sidesteps the
# issue.
